--- a/testEnviroment.ipynb
+++ b/testEnviroment.ipynb
@@ -39,20 +39,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "('Invalid value for mpv parameter', -4, (<MpvHandle object at 0x00000134D4B54D50>, <mpv.LP_MpvNode object at 0x00000134D4B55AD0>, <mpv.LP_MpvNode object at 0x00000134D4B55A50>))",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mpv'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 11\u001b[0m\n\u001b[0;32m      4\u001b[0m player \u001b[38;5;241m=\u001b[39m mpv\u001b[38;5;241m.\u001b[39mMPV(\n\u001b[0;32m      5\u001b[0m     ytdl\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m      6\u001b[0m     input_default_bindings\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,  \u001b[38;5;66;03m# Desabilita controles\u001b[39;00m\n\u001b[0;32m      7\u001b[0m     input_vo_keyboard\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;66;03m# ontop=\"yes\"\u001b[39;00m\n\u001b[0;32m      9\u001b[0m )\n\u001b[0;32m     10\u001b[0m player\u001b[38;5;241m.\u001b[39mfullscreen \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m \u001b[43mplayer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcommand\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mfullscreen\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     14\u001b[0m rasberryIdentifier \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m4\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     15\u001b[0m url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttp://127.0.0.1:5000/get_video_dict\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "File \u001b[1;32mc:\\Users\\inter18\\Desktop\\Projects\\raspTheater\\env\\Lib\\site-packages\\mpv.py:1237\u001b[0m, in \u001b[0;36mMPV.command\u001b[1;34m(self, name, decoder, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1235\u001b[0m out \u001b[38;5;241m=\u001b[39m cast(create_string_buffer(sizeof(MpvNode)), POINTER(MpvNode))\n\u001b[0;32m   1236\u001b[0m ppointer \u001b[38;5;241m=\u001b[39m cast(pointer, POINTER(MpvNode))\n\u001b[1;32m-> 1237\u001b[0m \u001b[43m_mpv_command_node\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhandle\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mppointer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1238\u001b[0m rv \u001b[38;5;241m=\u001b[39m out\u001b[38;5;241m.\u001b[39mcontents\u001b[38;5;241m.\u001b[39mnode_value(decoder\u001b[38;5;241m=\u001b[39mdecoder)\n\u001b[0;32m   1239\u001b[0m _mpv_free_node_contents(out)\n",
-      "File \u001b[1;32mc:\\Users\\inter18\\Desktop\\Projects\\raspTheater\\env\\Lib\\site-packages\\mpv.py:142\u001b[0m, in \u001b[0;36mErrorCode.raise_for_ec\u001b[1;34m(kls, ec, func, *args)\u001b[0m\n\u001b[0;32m    140\u001b[0m ex \u001b[38;5;241m=\u001b[39m kls\u001b[38;5;241m.\u001b[39mexception_for_ec(ec, \u001b[38;5;241m*\u001b[39margs)\n\u001b[0;32m    141\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ex:\n\u001b[1;32m--> 142\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ex\n",
-      "\u001b[1;31mValueError\u001b[0m: ('Invalid value for mpv parameter', -4, (<MpvHandle object at 0x00000134D4B54D50>, <mpv.LP_MpvNode object at 0x00000134D4B55AD0>, <mpv.LP_MpvNode object at 0x00000134D4B55A50>))"
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mrequests\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmpv\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mwebsocket\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# import pyautogui\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'mpv'"
      ]
     }
    ],
@@ -98,9 +96,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mpv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mrequests\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmpv\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mwebsocket\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# import pyautogui\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'mpv'"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import mpv\n",
@@ -134,14 +144,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Conectado ao servidor!\n"
+     "ename": "OSError",
+     "evalue": "Cannot find mpv-1.dll, mpv-2.dll or libmpv-2.dll in your system %PATH%. One way to deal with this is to ship the dll with your script and put the directory your script is in into %PATH% before \"import mpv\": os.environ[\"PATH\"] = os.path.dirname(__file__) + os.pathsep + os.environ[\"PATH\"] If mpv-1.dll is located elsewhere, you can add that path to os.environ[\"PATH\"].",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msocketio\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mrequests\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmpv\u001b[39;00m\n\u001b[0;32m      5\u001b[0m sio \u001b[38;5;241m=\u001b[39m socketio\u001b[38;5;241m.\u001b[39mClient()\n\u001b[0;32m      7\u001b[0m clientData \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m\"\u001b[39m:\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfacilities\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      8\u001b[0m               \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124murl\u001b[39m\u001b[38;5;124m\"\u001b[39m:\u001b[38;5;28;01mNone\u001b[39;00m}\n",
+      "File \u001b[1;32mc:\\Users\\hardw\\OneDrive\\Documentos\\GitHub\\raspTheater\\env\\Lib\\site-packages\\mpv.py:40\u001b[0m\n\u001b[0;32m     38\u001b[0m dll \u001b[38;5;241m=\u001b[39m ctypes\u001b[38;5;241m.\u001b[39mutil\u001b[38;5;241m.\u001b[39mfind_library(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmpv-2.dll\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m ctypes\u001b[38;5;241m.\u001b[39mutil\u001b[38;5;241m.\u001b[39mfind_library(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlibmpv-2.dll\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m ctypes\u001b[38;5;241m.\u001b[39mutil\u001b[38;5;241m.\u001b[39mfind_library(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmpv-1.dll\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dll \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m---> 40\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCannot find mpv-1.dll, mpv-2.dll or libmpv-2.dll in your system \u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mPATH\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m. One way to deal with this is to ship the dll with your script and put the directory your script is in into \u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mPATH\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m before \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mimport mpv\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m: os.environ[\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPATH\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m] = os.path.dirname(__file__) + os.pathsep + os.environ[\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPATH\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m] If mpv-1.dll is located elsewhere, you can add that path to os.environ[\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPATH\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m].\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     41\u001b[0m backend \u001b[38;5;241m=\u001b[39m CDLL(dll)\n\u001b[0;32m     42\u001b[0m fs_enc \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[1;31mOSError\u001b[0m: Cannot find mpv-1.dll, mpv-2.dll or libmpv-2.dll in your system %PATH%. One way to deal with this is to ship the dll with your script and put the directory your script is in into %PATH% before \"import mpv\": os.environ[\"PATH\"] = os.path.dirname(__file__) + os.pathsep + os.environ[\"PATH\"] If mpv-1.dll is located elsewhere, you can add that path to os.environ[\"PATH\"]."
      ]
     }
    ],
@@ -188,9 +203,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'00000000-0000-0000-0000-ec91616cf8de'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import uuid\n",
+    "str(uuid.UUID(int=uuid.getnode()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
